--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.30)
-project(2025_0425_programing2 C)
+project(2025_0425_programming2 C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(2025_0425_programing2 main.c
+add_executable(2025_0425_programming2 main.c
         ex.h
         ex1.c
         ex2.c)
